# EDCO

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
edco/: Goals.txt  TODO  __init__.py  __main__.py  commands.py  data.py  example_EDCO.json  example_EDCO.jsonc  tmp.py  tui.py  tui_test.py
edco/completions/: edco-completion.bash
edco/reco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
