[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edco"
dynamic = ["version"]
description = "EDCO - EDit COnfigs, makes your configuration easier"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Sevaed", email = "seva.romanovsky@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = ["click", "click_help_colors"]

[project.scripts]
edco = "edco.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "edco.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["edco", "edco.*"]

[tool.setuptools.package-data]
"edco" = ["pyrightconfig.json"]
"edco.completions" = ["*"]
